--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <!-- right sidebar blog post layout -->
         <section id="right-sidebar-wrapper" class="container">
 
-            <div class="preview-card-wrapper flex">
+            <div id="preview-card-wrapper" class="flex">
 
                 <div id="blog-preview-card" class="grid grid-two--cols">
                     <div class="blog-content-wrapper flex">
