create blog text editor work started

--- a/createBlog.html
+++ b/createBlog.html
@@ -83,8 +83,24 @@
         
 
         <!-- Blog Creation Editor layout start here -->
-        <section id="right-sidebar-wrapper" class="container">
-            amasd
+        <section id="right-sidebar-wrapper" class="createBlog">
+            <div id="toolbar-wrapper" class="flex">
+                <div id="toolbar-buttons" class="flex">
+                    <button class="toolbar-btn" id="bold"><b>B</b></button>
+                    <button class="toolbar-btn" id="italic"><i>I</i></button>
+                    <button class="toolbar-btn" id="underline"><u>U</u></button>
+                    <button class="toolbar-btn" id="undo"><img src="./Images/icons8-undo-24.png" alt=""></button>
+                    <button class="toolbar-btn" id="redo"><img src="./Images/icons8-redo-24.png" alt=""></button>
+                </div>
+                <div class="align-blogText">
+                    <select class="toolbar-btn">
+                        <option value="left">Align Left</option>
+                        <option value="center">Center</option>
+                        <option value="right">Align Right</option>
+                        <option value="justify">Justify</option>
+                      </select>
+                </div>
+            </div>
         </section>
         <!-- Blog Creation Editor layout end here -->
 
