style for textarea done. Now have to position the upload files for image uploading and have to add functionality of text editor.

--- a/createBlog.html
+++ b/createBlog.html
@@ -140,11 +140,7 @@
             </div>
 
             <div id="blog-contentSection">
-                <div class="flex" id="textLine">
-                    <button id="plusIcon">+</button>
-                    <!-- <p id="blogTextContent"><input type="text"></p> -->
-                    <textarea id="blogTextContent"></textarea>
-                </div>
+                <textarea id="contentInput" placeholder="Start Creating Your Blog"></textarea>
             </div>
 
         </section>
